--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>robotup team</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
   
@@ -46,12 +46,12 @@
             </div>
 
             <div class="links-404 py-3">
-                <a href="blog.html">Главная</a>
-                <a href="team.html">Команда</a>
-                <a href="robot.html">Робот</a>
-                <a href="station.html" id="menu-active">Станция</a>
-                <a href="soft.html">Software</a>
-                <a href="contact.html">Контакты</a>
+                <a href="/blog">Главная</a>
+                <a href="/team">Команда</a>
+                <a href="/robot">Робот</a>
+                <a href="/station" id="menu-active">Станция</a>
+                <a href="/soft">Software</a>
+                <a href="/contact">Контакты</a>
             </div>
 
 </body>
