--- a/station.html
+++ b/station.html
@@ -70,8 +70,8 @@
 
 <style>
     .robotup-nav {
-        background: rgb(196,0,0);
-        background: linear-gradient(90deg, rgba(196,0,0,1) 0%, rgba(238,35,0,1) 28%, rgba(205,186,0,1) 78%, rgba(255,235,0,1) 100%);
+        background: rgb(187,0,0);
+        background: linear-gradient(90deg, rgba(187,0,0,1) 0%, rgba(196,115,0,1) 39%, rgba(210,144,0,1) 77%, rgba(204,215,0,1) 100%, rgba(40,0,110,1) 100%);
     }
 </style>
 
