--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-    <meta http-equiv="Refresh" content="0; url=robot.html" />
+    <meta http-equiv="Refresh" content="0; url=/robot" />
     </head>
 
 
