--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,10 @@
 
                 <div class="text-center">
                   <p>
-                    По всем вопросам писать на 
-                    <span class="text-muted robotup-caption">robotup@gmail.com</span>
+                    По всем вопросам:
+                    <br>
+                    
+                    e-mail: <span class="text-muted robotup-caption">robotupteam@gmail.com</span>
                   </p>
                 </div>
 
