--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,6 @@
                     <h1>Как с нами связаться</h1>
                 </div>
 
-                <div class="text-center">
-                  <p>
-                    По всем вопросам:
-                    <br>
-                    
-                    e-mail: <span class="text-muted robotup-caption">robotupteam@gmail.com</span>
-                  </p>
-                </div>
-
 
             </div>
             </div>
@@ -73,7 +64,7 @@
                   По всем вопросам:
                   <br><br>
                   
-                  <b>e-mail:</b> <a class="text-muted robotup-caption" href="mailto:robotupteam@gmail.com">robotupteam@gmail.com</a>
+                  <b>e-mail:</b> <a class="robotup-caption" href="mailto:robotupteam@gmail.com">robotupteam@gmail.com</a>
                 </p>
               </div>
 
