--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="links-404 py-3">
-                <a href="/blog">Главная</a>
+                <a href="/">Главная</a>
                 <a href="/team">Команда</a>
                 <a href="/robot">Робот</a>
                 <a href="/station" id="menu-active">Станция</a>
