--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>robotup team</title>
+  <title>Не найдено</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,11 +41,12 @@
 
             <div class="robotup-nav text-center pb-3 mokaka-header">
 
+                <!--<img style="width: 55px;" src="/media/bobotblack.png" alt="">-->
                 robotup team
 
             </div>
 
-            <div class="links-404 py-3">
+            <div class="links-404 py-3" style="font-family: 'Roboto Mono', sans-serif;">
                 <a href="/">Главная</a>
                 <a href="/team">Команда</a>
                 <a href="/robot">Робот</a>
