more myxach kekas

--- a/robot/making-of/index.html
+++ b/robot/making-of/index.html
@@ -40,12 +40,12 @@
 
               <div class="scrollmenu" style="max-width: 1500px; margin: auto;">
                 <a href="/home">#/home/</a>
-                <a href="/team">/team/</a>
-                <a href="/dev">/dev/</a>
-                <a href="/robot" id="menu-active"> /robot/</a>
-                <a href="/station">/station/</a>
-                <a href="/software">/software/</a>
-                <a href="/contact">/contact/</a>
+                <a href="/team">Команда</a>
+                <a href="/dev">Dev</a>
+                <a href="/robot" id="menu-active">Робот</a>
+                <a href="/station">Черджер</a>
+                <a href="/software">Software</a>
+                <a href="/contact">Контакты</a>
             </div>
 
             </div>
