--- a/404.html
+++ b/404.html
@@ -47,10 +47,10 @@
             </div>
 
             <div class="links-404 py-3" style="font-family: 'Roboto Mono', sans-serif;">
-                <a href="/">Главная</a>
+                <a href="/">#/home/</a>
                 <a href="/team">Команда</a>
                 <a href="/robot">Робот</a>
-                <a href="/station" id="menu-active">Станция</a>
+                <a href="/station" id="menu-active">Черджер</a>
                 <a href="/soft">Software</a>
                 <a href="/contact">Контакты</a>
             </div>
