--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-       <header>
+        <header>
 
             <div class="robotup-nav text-center py-1 mokaka-header">
 
@@ -36,17 +36,18 @@
 
               <div class="scrollmenu" style="max-width: 1500px; margin: auto;">
                 <a href="/home">#/home/</a>
-                <a href="/team">/team/</a>
-                <a href="/dev">/dev/</a>
-                <a href="/robot" id="menu-active"> /robot/</a>
-                <a href="/charger">/charger/</a>
-                <a href="/software">/software/</a>
-                <a href="/contact">/contact/</a>
+                <a href="/team">Команда</a>
+                <a href="/dev">Dev</a>
+                <a href="/robot">Робот</a>
+                <a href="/station">Черджер</a>
+                <a href="/software">Software</a>
+                <a href="/contact" id="menu-active">Контакты</a>
             </div>
 
             </div>
 
         </header>
+
 
 <!--  ----------------------------------------------------------------------------------------------  -->
 
