--- a/robot/index.html
+++ b/robot/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-       <header>
+      <header>
 
             <div class="robotup-nav text-center py-1 mokaka-header">
 
@@ -38,14 +38,14 @@
             <!-- End most top info -->
             <div data-toggle="sticky-onscroll" style="background-color: black;">
 
-            <div class="scrollmenu" style="max-width: 1500px; margin: auto;">
+              <div class="scrollmenu" style="max-width: 1500px; margin: auto;">
                 <a href="/home">#/home/</a>
-                <a href="/team">/team/</a>
-                <a href="/dev">/dev/</a>
-                <a href="/robot" id="menu-active"> /robot/</a>
-                <a href="/station">/station/</a>
-                <a href="/software">/software/</a>
-                <a href="/contact">/contact/</a>
+                <a href="/team">Команда</a>
+                <a href="/dev">Dev</a>
+                <a href="/robot" id="menu-active">Робот</a>
+                <a href="/station">Черджер</a>
+                <a href="/software">Software</a>
+                <a href="/contact">Контакты</a>
             </div>
 
             </div>
