--- a/team/index.html
+++ b/team/index.html
@@ -37,12 +37,12 @@
 
               <div class="scrollmenu" style="max-width: 1500px; margin: auto;">
                 <a href="/home">#/home/</a>
-                <a href="/team">/team/</a>
-                <a href="/dev">/dev/</a>
-                <a href="/robot" id="menu-active"> /robot/</a>
-                <a href="/charger">/charger/</a>
-                <a href="/software">/software/</a>
-                <a href="/contact">/contact/</a>
+                <a href="/team" id="menu-active">Команда</a>
+                <a href="/dev">Dev</a>
+                <a href="/robot">Робот</a>
+                <a href="/station">Черджер</a>
+                <a href="/software">Software</a>
+                <a href="/contact">Контакты</a>
             </div>
 
             </div>
