--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
         <div class="container">
           <div class="row align-items-start">
 
-            <div class="col">
+            <div class="col-sm">
               
               <div class="text-center">
                 <p class="py-3">
@@ -91,7 +91,7 @@
               </div>
 
             </div>
-            <div class="col">
+            <div class="col-sm">
               <img class="img-fluid mx-auto" src="/media/telephone2-min.png">
             </div>
 
