vilkopopovicky kozel rezany

--- a/404.html
+++ b/404.html
@@ -47,11 +47,11 @@
             </div>
 
             <div class="links-404 py-3" style="font-family: 'Roboto Mono', sans-serif;">
-                <a href="/">#/home/</a>
+                <!--<a href="/">#/home/</a>-->
                 <a href="/team">Команда</a>
                 <a href="/robot">Робот</a>
-                <a href="/station" id="menu-active">Черджер</a>
-                <a href="/soft">Software</a>
+                <!--<a href="/station" id="menu-active">Черджер</a>
+                <a href="/soft">Software</a>-->
                 <a href="/contact">Контакты</a>
             </div>
 
