--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <head>
 
     <title>robotup team</title>
+    <meta name="robots" content="none">
     <meta charset="utf-8">
     <meta http-equiv="Refresh" content="1; url=/robot" />
     
