--- a/robot/making-of/index.html
+++ b/robot/making-of/index.html
@@ -4,6 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
+  <meta name="robots" content="none">
   <title>Робот удаленного присутствия</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/css/style.css">
