--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en" >
 <head>
 
+  <meta name="robots" content="none">
   <meta charset="UTF-8">
   <title>Контакты</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
