--- a/robot/index.html
+++ b/robot/index.html
@@ -1,9 +1,102 @@
+<!-- I move in, i move out, Vanya Mokaka, Vanya Mokaka -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <!DOCTYPE html>
 <html lang="en" >
 <head>
 
   <meta charset="UTF-8">
+  <meta name="robots" content="none">
   <title>Робот удаленного присутствия</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
   <link rel="stylesheet" href="/css/style.css">
