--- a/robot/index.html
+++ b/robot/index.html
@@ -1,95 +1,89 @@
 <!-- I move in, i move out, Vanya Mokaka, Vanya Mokaka -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!--
+
+`````````````````````````````````````````````````````````````````````````````````````````````````.
+`.............................--------------------------------::::::::::::::::::::::///////////++++
+`.................................-:syyyhhhhhhyyyyho+/::::---:+osy/::-::::::::::::::::::////////+++
+`............................//+:+ohdddmmNdddmmhdmNmmmdh+ss+oymssd+:----:::::::::::::::::://///////
+`.........................--:mdhmdhdddmmmNNmmmmmmmNmmdmmdddhddhhhmyso+/---:--:::::::::::::::://////
+`.`````..........```.+yhyyssyddmdddNmmNmNNNNNNNNNNNNNmmmNmmNNmdmmNmmNmmhhyso+:----:::::::::::::////
+``````````````````---yNmmmdhhhdmmmmNNNNNNNNNNNNNMNNNmhdmNNNNNNNNNNNNNNNNNNNmdh/:---:::::::::::::://
+````````````````.-ohydmmddddddmmmmmNNNNNNNNNNNNNNmhhhhdddNNNNNNNNNNNNNNNNNNNNNhyso/----::::::::::::
+``````````````.-:yhdmmmmddmmmmNNNNNNNNNNNNNNNNNNmmmddhddhmNNmmNNNNNNNNNNNMMNNNNNNNds:------::::::::
+``````````````-+soyddddddhddmmmNNNNNNNNNNMMNNNNNmmNhyyhddmmdmNNNNNNNNNNMNNNNNNNNNNNN:--------::::::
+ ``````````..-osyhhyyyyhhhdhdmmmNNNNNNNMMMMMMNNmddmmmddhhdmddmNNNNNNNNNNNNNNNNMMNNNNo/-----------::
+ `````````.++/hdddhhhhhdhhmmmNNNNNNNNNNNNNMMNNNmmmNNmmsosdddhdmmNNNNNNNNNNNNNNNNNNNNms::----------:
+ ````````-+syhmmmdddhyyhhdNNNNNNNMMNNNNNNMNNNNNNNNNNmhddmdddddmNNNNNMMMMMMMMMMNNNMMMMds/:----------
+ ````````+hhdmmmNmmmmdhddmNNNNNNNMMMMNNMMMMNNNNNmmNNNNNNNmmmNNNNNNNNMMMMMMMMMMMMMMMMNdso/----------
+ ````````omdmmNmmmmmmmmNNNNNNmNNMMMMMMMMMNMNNNNNmmmNNNNNNNNNMMMMMMMMMMMMMMMMMMMMMMMMMMNNds---------
+ ```````-smmmmNmmyhhmmNNNNMMNNNNNNMMMMMMNNNNNmmmddhhdddmmNNNNNNNNNMMMMMMMMMMMMMMMMMMMNNNNm---------
+ ``````.ydmmddNNNmmmmmmNNNNNNNNNNNNNNNNNNNNmdddhhyssssyyhddmmmNNNNNNNNNNMMMMMMMMMMMMMNNNNN:--------
+ ``````.shmNmmNNNmmmmmmmmmmmmmmmmmmddddddyyyysssooooo+ooosyhhhdddmmmmNNNNNNMMMMMMMMMNNNMNN+:-------
+ ```````oydmmmmmdhhhhhdddddhhhhhyyysssssooooooo+++o++///+oossyyhhdddmmmmmNNNMMMMMMMMMNNMMM::-------
+ `````.:hdmNNNmhyssssyyyyyyyyyyyssooooooo++++++++++++/++++ooosyyhhdddddmmmNNNMMMMMMMMMNNNNy+.------
+ `````/sdmNNNNNs+++oooooooooooooo+++++++++++//++++++++++++ooooyyyhhhdddddmmNNNMMMMMMMMMNNNNs...----
+ ````oydNNNNmmdo:////////////++++//////////////++++++++++oooosyyyyyhhhhdddmmmNMMMNNMMMMNNNms....-..
+ ````hdNNNNNmmy+-:----:::::::///::::::::::////////++++++oossssssssyyhhhdddmmmmNMMNNNMNNMNNmo-......
+    `+hNNNNNNmy+-....--------------::::::://////::////++++oooooooosyyhhdddmmmmNMMNNNMMNNNNNs.......
+    `-smNNNNNmy/..........---........--:::::::---::::////++++++++osyyhhhddmmmmNNNNNNMNNNNNNy:......
+     `-+mNNNNNd/.........`.``........-::::/:---..-::::///++++++ooossyyhhdddmmmNNNNNNNNNNNNNho......
+     ``.hdNNNmd+...``````````.......--::::::---.--::////+oooooosyyyhhhhddddddmNNNNNNNNMNNMNh+......
+      ``hdmmNNm+..````````.......-----:::/:::---::/+++oossssssyyhhdddddddddmmmNNMNNMNNMMMMNdy......
+       `:sdmmNm+.........-:--:---::::://////://+++osssyyhhhddddmddmmmmmmmmddddNNNMMMNNNMMMNy-......
+         +dNmmm+`...-//:///oo+osoooo++++/++++ooossyhhddmNNNNNNmmmmmmmmmmmmddddmmNNNNNNMNNMs/.......
+         +hmddd/`.---+o/osyyhhdddhhyysooooooossyyhdmmmNNNNNNNNNNNNmmmmmmmmddddmmNNNNNNNNNN-........
+         :sdddh/`.--:+ossyddddddmNNmmdhysssssyyhddmmNNNNNdmNNNMNNmNNNNmmdddhhhmmmNNNNNmNmh.........
+         ``yyhy/`-://osyhhhhdmNNmNNmmmdhhsooosyhddNNNNNNNhhNNNNNmdmNNNmmddhhhhdmmNNNNNmmy/.........
+           .+ys/..--:+ohhhs++yyyshdmmdddhh+:-/+ydmNNNNmmmddmmmmmmdmmmddhhyyhhhdmmNNNNNm/-..........
+            /sh/.....:/+ooooooosyhddhhyyyy/-.:/ydmmmmmmmmmddddddddddhyyyyyyyyhdmmNNNNNm...`........
+            :+d/.```````.-oosyyyhhhyssoo++:-.-/yddddhhhhhhhhyyhhysssoossyyyhhddddmmNNmm.``.........
+            `.d/``````````--::////:::::::-..`:+hdddddhhyysssssssssooossyyyhhhddddmmNmmm.`````......
+             `..``````````...........-----.`.:+hdddddhyysssysssooosssssyyyhhhddddmmmNmh.`````......
+              ```.``....``.`.....--:::--..``.:+syhddddhyssooooooooosssyyyhhhhddddmmNmmd.`````......
+               ``......`````.....-:+++-..```.:/osymmmmmhsoo+++ooooossyyyhhyhddmmmNNNmmm.`````......
+               .-........`...---:+syys`````.:/+syhmhhhddyoo+++++oosssyyhhhhdddmmmmNNddh.``````.....
+               .:.........----::/syys+```...-/+syhddddddyso+++++oossyyyhhhddddmmmNNmds:``````......
+               -:-.....-----:////os+/:......:/+syhmdddmmdsoooooooossyyyhhhdddmmmmNho:-````````.....
+               .-...---..-:::///+++:::/::/::++oyhhdNNNNmdysoossssssssyyhhhdmmmmmmms-``````````.....
+                `:--:-----:::++///:///:/+ssyhhhhhdNNNmmmdhyssyhyysssyyhhdddmmmmmmms.``````````.....
+                `+/:-:/:::://+///+++++://:/ohdddhhddddddhhyyyyyhhhyyyhhhdddmmmmNNNs.```````````....
+                `://-:/+//::/ooo+ooo+/:::/osysyhhhhhhhdhhdddhhhhhdyyhhdmmmmmmmNNNNs``````````......
+                 `.-/+o++o+////+syyooosoosyyhhhhddddmmdddddhhhyhhdhhdddmmmmmmmNNNNy//+o/:.``.`.....
+                 ```:/++osso++oosoo+//+++ooosssyyyyhhhhhhyyyyyhyydddmmmdmmNNNNNNNmhyyhhmddhhhhhh+/:
+              `.-://+oooooso++ooyo+/::////osyyhhhhyyysyyyyyyhhddddmmmmmmmmNNNNNNMdhyyyhNNMMMMMMMNNN
+         ```.-/yds-  -/+sysoo/+syys+/////+oshddddhssssssyyhhhhddddmmmNNNNNNNNNNNMdhyyyydmMMMMMMMMMM
+ ``````..+yyyhmdh``   `.oyyys+sysyyso+/::::/syyyyyoooooosyhhhdmdmNNNNNNNNNNNNNNNMdhydhyydMMMMMMMMMM
+.:+sydddddmdmmm+.       `-yysyyhdhyyyo---.--///:/+++++osshdddmNNNNNNNNNNNNNNNNMNNyyyddhhdMMMMMMMMMM
+/ydddmmmmmddmmm+`        .dyshdddddyo+:::--::++/++/+oossydmmmmNNNNNNNNNNNNNNNNNmdyyyhhdhmMMMMMMMMMM
++mmmmNmmNmmmNNNy+ ```    .Mhymmmdddhsooo+///o+osssssssyyymmmmNNNNNNNNNNNNNNmNNmdyssyyhdmNMMMMMMMMMM
++mmmmNNNmmmmNNNNd-.``    .mddhdddmmmdhhssssssssyyyyyyyhhmNNmNNNNNNNNNNmmmmmNNNhysosyhhdNMMMMMMMMMMM
++mNNNNNNNNNmNNNNNm/      `yyy+++shmNmmNmmdmmmmmmddmmmmNNNNNNNNNNNNNNNmmdddmNNMo+++syhdMMMMMMMMMMMMM
++mNNNNNNNNNNNmNNNNs:     `/oyyo++yhhhdNNNmNNNNNNNNNmmNNNNNNNNNNNNNmddddddmmNmh+//+syhmMMMMMMMMMMMMM
++NNNNNNNNNNNNmNNNNo.      `:odys/osyyydddmmmdmmmmmmNNNNNNNNNNNmmmdhhhhhddmNmho::/+oydmMMMMMMMMMMMMM
++NNNNNNNNNNNNNNNNN/      `://oyhyo+ssssssossshhhhhddmmmddhhhhhyyyyyyhhhdddhooooooosyNNMMMMMMMMMMMMM
++NNNNNNNNNNNNNNNNN/   ```-ddy-/oNs++oooooooo+oo+oooossssssssssysyyyyhhdddy/yhdNmmmdhNMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNN/  /sdddmmdy:-yssoooooooooooo+ooooooosssssssyyyyyhhhdmyssddmdmNMdoNMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNN/  sNMMMNNmd+:+syssoooo++ooooooooooooossssssyyyyhhdhhhoshmmdmmMMh/NMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNNy++dMMMMMMNmmdssoo//++++ooooooooooooooosssssyyyssss/oysydNNmMMMMh/NMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNdhydmMMMMMMMMMNmyo+/:-.--+ooooooosooossssssyyyys+++/shmmNNMMMMMMMh+NMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNmdhdNMMMMMMMMMMMNdsss///-.-+oossssssssssyysso////yhdmmNmNMMMMMMMMmyNMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNNyodNMMMMMMMMMMMMMNNmoooo/:-:/ossssssyyyo+///++oymmmNNMMMMMMMMMMMMNMMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNNs/odMMMMMMMMMMMMMMMNmmmdys+oo/+oyyyyys/////+hddmNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNNdhhmMMMMMMMMMMMMMMMMMMMMmdysoso++sso/::++o+sNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNNNNNMMMMMMMMMMMMMMMMMMMMMMNNyssso//:---:hmmmNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oNNNNNNNNNNNNNNNNNNNNMMMMMMMMMMMMMMMMMMMMMMMMNmmyo:--:/+dNNNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oNNNNNNNNNNNMMNMMMMMNMMMMMMMMMMMMMMMMMMMMMMMMMMMNNmssNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oNNNNNNNNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oNMMMNNNNNMMMMMMMMMMNMMMNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oMMMMNNNNMMMMMMMMMNNNNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oMMNNNMMNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+oMMMMMMMNMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+
+-->
 
 <!DOCTYPE html>
 <html lang="en" >
