--- a/new/index.html
+++ b/new/index.html
@@ -101,7 +101,7 @@
 
 <style>
 .navbar-item {
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	font-weight: 500;
 }
 h1, h2 {
