--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-
 <html>
+<head>
+    <title>robotup | smth cool is in develop</title>
+</head>
+<body>
+    <div>
+        <img class="robotuplogo" src="logo.svg">
+        <p>
+            something cool is in develop :)
+        </p> 
+    </div>   
+</body>
 
-    <head>
-    <meta http-equiv="Refresh" content="0; url=/robot" />
-    </head>
-
-
+<style>
+    .robotuplogo {
+        display: block;
+        margin: auto;
+        margin-top: 20%;
+        width: 100%;
+        max-width: 600px;
+    }
+    body {
+        background-color: #111;
+    }
+    p {
+        margin-top: 30pt;
+        text-align: center;
+        color: whitesmoke;
+        font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+        font-size: 1.5rem;
+    }
+</style>
 </html>
