--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="robotupbody">
-        <h1>Проводим<br>техни-<br>ческие<br>работы</h1>
+        <h1 id="techraboty">Проводим<br>техни-<br>ческие<br>работы</h1>
         <img id="robotupmonki" src="monki2.svg">
     </div>
 </body>
@@ -56,5 +56,15 @@
         
     }    
     setInterval('changeRobotupMonki()',500);
+
+    $( "#techraboty" ).hover( 
+        function() {
+            $('#techraboty').html("Чаня<br>снова<br>врет<br>жипсы");
+
+        }, function() {
+            $('#techraboty').html("Проводим<br>техни-<br>ческие<br>работы");
+        }
+    );
+    
 </script>
 </html>
